--- a/Three Dimensional Racer/Base.lproj/MainMenu.xib
+++ b/Three Dimensional Racer/Base.lproj/MainMenu.xib
@@ -669,6 +669,7 @@
         </menu>
         <window title="Three Dimensional Racer" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" frameAutosaveName="MainWindow" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
+            <windowCollectionBehavior key="collectionBehavior" fullScreenPrimary="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="335" y="390" width="600" height="500"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1440" height="900"/>
