--- a/Three Dimensional Racer/TDRRaceViewController.xib
+++ b/Three Dimensional Racer/TDRRaceViewController.xib
@@ -17,7 +17,7 @@
             <rect key="frame" x="0.0" y="0.0" width="499" height="372"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <sceneView sceneName="" loops="YES" autoenablesDefaultLighting="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ro5-Sj-3uU">
+                <sceneView sceneName="" loops="YES" allowsCameraControl="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ro5-Sj-3uU">
                     <rect key="frame" x="0.0" y="0.0" width="499" height="372"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <color key="backgroundColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
